Try and support local running of tests better.